--- a/overlay/device/packages/apps/Settings/res/values/config.xml
+++ b/overlay/device/packages/apps/Settings/res/values/config.xml
@@ -23,5 +23,12 @@
          doesn't interact well with scroll view -->
     <bool name="config_lock_pattern_minimal_ui">false</bool>
 
-
+    <!-- Defines the location of the fingerprint sensor on the device
+         0 = back
+         1 = front
+         2 = left side
+         3 = right side
+         4 = FOD (front)
+    -->
+    <integer name="config_fingerprintSensorLocation">3</integer>
 </resources>
