--- a/overlay/device/packages/apps/Settings/res/values/config.xml
+++ b/overlay/device/packages/apps/Settings/res/values/config.xml
@@ -18,10 +18,7 @@
 
     <bool name="config_enableManualSubProvisioning">true</bool>
 
-    <!-- Whether to use a UI variant that minimizes the number of UI elements on screen. This is
-         typically used when there is not enough space to display everything, because pattern view
-         doesn't interact well with scroll view -->
-    <bool name="config_lock_pattern_minimal_ui">false</bool>
+    <bool name="config_show_smooth_display">true</bool>
 
     <!-- Defines the location of the fingerprint sensor on the device
          0 = back
